		Added HackyAI settings: ExcessPowerFactor, MinimumExcessPower, IdleBaseUnitsMaximum, RushAttackScanRadius, ProtectUnitScanRadius, RallyPointScanRadius. See the traits documentation for more information.
		Added HitAnimPalette trait for LaserZap projectiles. Laser hit animations can now specify individual palettes. Defaults to effect palette.
		Fixed performance issues with units pathing to naval transports.
		Fixed unit moving to transports that have moved.
	Server:
		Message of the day is now shared between all mods and a default motd.txt gets created in the user directory.
	Asset Browser:
		Filenames are now listed in alphabetical order
	Map Editor:
		Removed legacy INI/MPR map import.
	Utility:
		Added an improved INI/MPR map import.
	Mod / Custom map compatibility:
		Altitude is no longer parsed from actor templates in maps. Specify CenterPosition instead.
		system.yaml has been split into four files for all mods: system-actor.yaml, system-ai.yaml, system-player.yaml and system-world.yaml.
		Run `OpenRA.Utility.exe --upgrade-mod <mod> 20131223` to automatically upgrade mod rules.
		Run `OpenRA.Utility.exe --upgrade-map <map path> 20131223` to automatically upgrade custom map rules.
		Added a new trait Demolishable for buildings to handle the C4 demolition.
		Mods that use custom TileSize must specify both width and height.
		If you spot black tiles in your Dune 2000 ARRAKIS maps, replace them with the remaining sand and rock tiles. Go to Map → Fix Open Areas to randomize them.
		The TestFile check in mod.yaml has been renamed to TestFiles (plural!) and now supports a comma-separated list of assets that are required to load the game.
	Packaging:
		Removed portable install option from Windows installer as the game left without write access breaks content download and error log generation.
		Added HTML documentation to the Windows installer.

20131223:
	All mods:
		Fixed dead units sometimes exploding or leaving husks when they weren't in the world.